# serialist-max

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainhehe.cpp  package-info.json.in
extras/: Serialist.maxpat
help/: ser.index.maxhelp  ser.interpolate.maxhelp  ser.lowpass.maxhelp  ser.makenote.maxhelp  ser.multilist.maxhelp  ser.op.maxhelp  ser.pattern.maxhelp  ser.phase.maxhelp  ser.phasemap.maxhelp  ser.pulse.maxhelp  ser.pulsefilter.maxhelp  ser.random.maxhelp  ser.router.maxhelp  ser.scale.maxhelp  ser.snh.maxhelp  ser.transport.maxhelp  ser.transport.ui.maxhelp  ser.trigger.maxhelp  ser.util.maxhelp  ser.waveform.maxhelp
init/: serialist-defines.txt
javascript/: location.js
jsextensions/: file_name.js
legacy/: ser.core.multislider.maxpat  ser.core.slider.maxpat  ser.corpus.multislider.maxpat  ser.defines.maxpat  ser.defines.ui.maxpat  ser.lfo.maxpat  ser.looper.maxpat  ser.makenote.ui.maxpat  ser.phase.ui.maxpat  ser.pulse.ui.maxpat  ser.stepper.ui.maxpat  ser_.multimap.maxpat  ser_.pattrformat.maxpat  serialist.maxpat
legacy/ser.allocator/: ser.allocator.cpp
legacy/ser.pulse/: CMakeLists.txt  ser.pulse.cpp  ser.pulse_test.cpp
legacy/ser.randpulse/: CMakeLists.txt
legacy/util/: ser.objecthandler.maxpat  ser.recv.maxpat  ser.sonify.maxpat
misc/: commands_defines.json
patchers/: ser.addmul.ui.maxpat  ser.corpus.kslider.maxpat  ser.corpus.multislider.maxpat  ser.corpus.scoreslider.maxpat  ser.corpus.variable.maxpat  ser.defines.maxpat  ser.defines.ui.maxpat  ser.indexview.ui.maxpat  ser.interpolateview.ui.maxpat  ser.interpolator.ui.maxpat  ser.lfo.maxpat  ser.looper.maxpat  ser.makenote.ui.maxpat  ser.multiview.maxpat  ser.multiview2.maxpat  ser.noteview.ui.maxpat  ser.oscillator.ui.maxpat  ser.phasepulse.ui.maxpat  ser.pulse.ui.maxpat  ser.pulseview.ui.maxpat  ser.stepper.ui.maxpat  ser.transport.ui.maxpat
patchers/generatives/: ser.addmul.ui.maxpat  ser.interpolate.ui.maxpat  ser.interpolator.ui.maxpat  ser.makenote.ui.maxpat  ser.oscillator.ui.maxpat  ser.phasepulse.ui.maxpat  ser.stepper.ui.maxpat  ser.transport.ui.maxpat
patchers/private/: ser_.multimap.maxpat  ser_.undoredo.maxpat
patchers/ui/: ser.core.multislider.maxpat  ser.core.slider.maxpat  ser.corpus.multislider.maxpat  ser.corpus.rsslider.maxpat  ser.corpus.toggle.maxpat  ser.interpolateview.ui.maxpat  ser.multislider.ui.maxpat  ser.noteview.ui.maxpat  ser.pulseview.ui.maxpat  ser.slider.ui.maxpat
patchers/util/: ser.connectionhandler.maxpat  ser.createobjectmenu.maxpat  ser.movable.maxpat  ser.objecthandler.maxpat  ser.recv.maxpat  ser.send.maxpat
patchers/view/: ser.scope.ui.maxpat  ser.view.multiview.maxpat  ser.view.multiview2.maxpat
ser.allocator/: CMakeLists.txt  ser.allocator.cpp
ser.chordthresh/: CMakeLists.txt  ser.chordthresh.cpp  ser.chordthresh_test.cpp
ser.core.interpolator/: CMakeLists.txt  ser.core.interpolator.cpp
ser.core.makenote/: CMakeLists.txt  ser.core.makenote.cpp  ser.core.makenote_test.cpp
ser.core.oscillator/: CMakeLists.txt  ser.core.oscillator_test.cpp
ser.core.patternizer/: CMakeLists.txt  ser.core.patternizer.cpp
ser.core.phasepulse/: CMakeLists.txt  ser.core.phasepulse.cpp
ser.core.pulsefilter/: CMakeLists.txt  ser.core.pulsefilter.cpp  ser.core.pulsefilter_test.cpp
ser.core.random/: CMakeLists.txt  ser.core.random.cpp  ser.core.random_test.cpp
ser.core.snh/: CMakeLists.txt  ser.core.snh_test.cpp
ser.core.transport/: CMakeLists.txt  ser.core.transport.cpp  ser.core.transport_test.cpp
ser.index/: CMakeLists.txt  ser.index.cpp  ser.index_test.cpp
ser.interpolate/: CMakeLists.txt  ser.interpolate.cpp  ser.interpolate_test.cpp
ser.interpolator/: CMakeLists.txt  ser.interpolator.cpp  ser.interpolator_test.cpp
ser.lowpass/: CMakeLists.txt  ser.lowpass.cpp  ser.lowpass_test.cpp
ser.makenote/: CMakeLists.txt  ser.makenote.cpp  ser.makenote_test.cpp
ser.multilist/: CMakeLists.txt  ser.multilist.cpp  ser.multilist_test.cpp
ser.op/: CMakeLists.txt  ser.op.cpp  ser.op_test.cpp
ser.oscillator/: CMakeLists.txt  ser.oscillator.cpp  ser.oscillator_test.cpp
ser.pattern/: CMakeLists.txt  ser.pattern.cpp
ser.patternizer/: CMakeLists.txt  ser.patternizer.cpp  ser.patternizer_test.cpp
ser.phase/: CMakeLists.txt  ser.phase.cpp  ser.phase_test.cpp
ser.phasemap/: CMakeLists.txt  ser.phasemap.cpp  ser.phasemap_test.cpp
ser.phasepulse/: CMakeLists.txt  ser.phasepulse.cpp  ser.phasepulse_test.cpp
ser.playground/: CMakeLists.txt  ser.playground.cpp  ser.playground_test.cpp
ser.pulse/: CMakeLists.txt  ser.pulse.cpp
ser.pulsefilter/: CMakeLists.txt  ser.pulsefilter.cpp  ser.pulsefilter_test.cpp
ser.random/: CMakeLists.txt  ser.random.cpp  ser.random_test.cpp
ser.randpulse/: ser.randpulse.cpp
ser.router/: CMakeLists.txt  ser.router.cpp  ser.router_test.cpp
ser.scale/: CMakeLists.txt  ser.scale.cpp  ser.scale_test.cpp
ser.selector/: CMakeLists.txt  ser.selector.cpp
ser.slidermapping/: CMakeLists.txt  ser.slidermapping.cpp  ser.slidermapping_test.cpp
ser.snh/: CMakeLists.txt  ser.snh.cpp  ser.snh_test.cpp
ser.transport/: CMakeLists.txt  ser.transport.cpp  ser.transport_test.cpp
ser.trigger/: CMakeLists.txt  ser.trigger.cpp
ser.util/: CMakeLists.txt  ser.util.cpp  ser.util_test.cpp
ser.waveform/: CMakeLists.txt  ser.waveform.cpp  ser.waveform_test.cpp
serialist_transport/: CMakeLists.txt  serialist_transport.cpp  serialist_transport.h
shared_code/: CMakeLists.txt  attribute_setters.h  inlet_triggers.h  max_stereotypes.h  max_timepoint.h  message_stereotypes.h  parsing.h  result.h  save_state.h  serialist_attributes.h  utils.h
templates/: serialist.maxpat  serialist_help.maxpat  serialist_test.maxpat
test/: cpp
test/cpp/: parsing_tests.cpp
test/max/: interpolator_test.maxpat  makenote_test.maxpat  op_test.maxpat  oscillator_test.maxpat  patternizer_test.maxpat  phasepulse_test.maxpat  pulse_test.maxpat  pulsefilter_test.maxpat  random_test.maxpat  randpulse_test.maxpat  router_test.maxpat  slidermapping_test.maxpat  snh_test.maxpat  stepper_test.maxpat  test_playground.maxpat  util_test.maxpat  (+2 more)
(+37 files in other folders)
